// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DisplayBox Mobile 1`] = `
<DisplayBox
  element={
    <Table
      elements={
        Array [
          Object {
            "name": "BCeID",
            "value": "bobross42",
          },
          Object {
            "name": "Last Name",
            "value": "Ross",
          },
          Object {
            "name": "First Name",
            "value": "Bob",
          },
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          },
        ]
      }
      heading=""
      isFeesData={false}
      styling=""
    />
  }
  icon={
    <MdPerson
      size={32}
    />
  }
  styling="blue-background"
>
  <div
    className="display-box blue-background"
  >
    <div
      className="display-icon"
    >
      <MdPerson
        size={32}
      >
        <IconBase
          attr={
            Object {
              "viewBox": "0 0 24 24",
            }
          }
          size={32}
        >
          <svg
            fill="currentColor"
            height={32}
            size={32}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              key="0"
            />
          </svg>
        </IconBase>
      </MdPerson>
    </div>
    <div
      className="display-right-element"
    >
      <Table
        elements={
          Array [
            Object {
              "name": "BCeID",
              "value": "bobross42",
            },
            Object {
              "name": "Last Name",
              "value": "Ross",
            },
            Object {
              "name": "First Name",
              "value": "Bob",
            },
            Object {
              "name": "Email Address",
              "value": "bob.ross@example.com",
            },
          ]
        }
        heading=""
        isFeesData={false}
        styling=""
      >
        <table
          className=""
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              />
            </tr>
          </thead>
          <tbody>
            <TableElement
              element={
                Object {
                  "name": "BCeID",
                  "value": "bobross42",
                }
              }
              isFeesData={false}
              key="BCeID"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  BCeID
                </td>
                <td>
                  bobross42
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Last Name",
                  "value": "Ross",
                }
              }
              isFeesData={false}
              key="Last Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Last Name
                </td>
                <td>
                  Ross
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "First Name",
                  "value": "Bob",
                }
              }
              isFeesData={false}
              key="First Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  First Name
                </td>
                <td>
                  Bob
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Email Address",
                  "value": "bob.ross@example.com",
                }
              }
              isFeesData={false}
              key="Email Address"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Email Address
                </td>
                <td>
                  bob.ross@example.com
                </td>
              </tr>
            </TableElement>
          </tbody>
        </table>
      </Table>
    </div>
  </div>
</DisplayBox>
`;

exports[`Storyshots DisplayBox With Blue Background 1`] = `
<DisplayBox
  element={
    <Table
      elements={
        Array [
          Object {
            "name": "BCeID",
            "value": "bobross42",
          },
          Object {
            "name": "Last Name",
            "value": "Ross",
          },
          Object {
            "name": "First Name",
            "value": "Bob",
          },
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          },
        ]
      }
      heading=""
      isFeesData={false}
      styling=""
    />
  }
  icon={
    <MdPerson
      size={32}
    />
  }
  styling="blue-background"
>
  <div
    className="display-box blue-background"
  >
    <div
      className="display-icon"
    >
      <MdPerson
        size={32}
      >
        <IconBase
          attr={
            Object {
              "viewBox": "0 0 24 24",
            }
          }
          size={32}
        >
          <svg
            fill="currentColor"
            height={32}
            size={32}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              key="0"
            />
          </svg>
        </IconBase>
      </MdPerson>
    </div>
    <div
      className="display-right-element"
    >
      <Table
        elements={
          Array [
            Object {
              "name": "BCeID",
              "value": "bobross42",
            },
            Object {
              "name": "Last Name",
              "value": "Ross",
            },
            Object {
              "name": "First Name",
              "value": "Bob",
            },
            Object {
              "name": "Email Address",
              "value": "bob.ross@example.com",
            },
          ]
        }
        heading=""
        isFeesData={false}
        styling=""
      >
        <table
          className=""
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              />
            </tr>
          </thead>
          <tbody>
            <TableElement
              element={
                Object {
                  "name": "BCeID",
                  "value": "bobross42",
                }
              }
              isFeesData={false}
              key="BCeID"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  BCeID
                </td>
                <td>
                  bobross42
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Last Name",
                  "value": "Ross",
                }
              }
              isFeesData={false}
              key="Last Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Last Name
                </td>
                <td>
                  Ross
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "First Name",
                  "value": "Bob",
                }
              }
              isFeesData={false}
              key="First Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  First Name
                </td>
                <td>
                  Bob
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Email Address",
                  "value": "bob.ross@example.com",
                }
              }
              isFeesData={false}
              key="Email Address"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Email Address
                </td>
                <td>
                  bob.ross@example.com
                </td>
              </tr>
            </TableElement>
          </tbody>
        </table>
      </Table>
    </div>
  </div>
</DisplayBox>
`;

exports[`Storyshots DisplayBox With Border 1`] = `
<DisplayBox
  element={
    <Table
      elements={
        Array [
          Object {
            "name": "BCeID",
            "value": "bobross42",
          },
          Object {
            "name": "Last Name",
            "value": "Ross",
          },
          Object {
            "name": "First Name",
            "value": "Bob",
          },
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          },
        ]
      }
      heading=""
      isFeesData={false}
      styling=""
    />
  }
  icon={
    <MdPerson
      size={32}
    />
  }
  styling="border-background"
>
  <div
    className="display-box border-background"
  >
    <div
      className="display-icon"
    >
      <MdPerson
        size={32}
      >
        <IconBase
          attr={
            Object {
              "viewBox": "0 0 24 24",
            }
          }
          size={32}
        >
          <svg
            fill="currentColor"
            height={32}
            size={32}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              key="0"
            />
          </svg>
        </IconBase>
      </MdPerson>
    </div>
    <div
      className="display-right-element"
    >
      <Table
        elements={
          Array [
            Object {
              "name": "BCeID",
              "value": "bobross42",
            },
            Object {
              "name": "Last Name",
              "value": "Ross",
            },
            Object {
              "name": "First Name",
              "value": "Bob",
            },
            Object {
              "name": "Email Address",
              "value": "bob.ross@example.com",
            },
          ]
        }
        heading=""
        isFeesData={false}
        styling=""
      >
        <table
          className=""
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              />
            </tr>
          </thead>
          <tbody>
            <TableElement
              element={
                Object {
                  "name": "BCeID",
                  "value": "bobross42",
                }
              }
              isFeesData={false}
              key="BCeID"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  BCeID
                </td>
                <td>
                  bobross42
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Last Name",
                  "value": "Ross",
                }
              }
              isFeesData={false}
              key="Last Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Last Name
                </td>
                <td>
                  Ross
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "First Name",
                  "value": "Bob",
                }
              }
              isFeesData={false}
              key="First Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  First Name
                </td>
                <td>
                  Bob
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Email Address",
                  "value": "bob.ross@example.com",
                }
              }
              isFeesData={false}
              key="Email Address"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Email Address
                </td>
                <td>
                  bob.ross@example.com
                </td>
              </tr>
            </TableElement>
          </tbody>
        </table>
      </Table>
    </div>
  </div>
</DisplayBox>
`;

exports[`Storyshots DisplayBox With Icon 1`] = `
<DisplayBox
  element={
    <Table
      elements={
        Array [
          Object {
            "name": "BCeID",
            "value": "bobross42",
          },
          Object {
            "name": "Last Name",
            "value": "Ross",
          },
          Object {
            "name": "First Name",
            "value": "Bob",
          },
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          },
        ]
      }
      heading=""
      isFeesData={false}
      styling=""
    />
  }
  icon={
    <MdPerson
      size={32}
    />
  }
  styling=""
>
  <div
    className="display-box "
  >
    <div
      className="display-icon"
    >
      <MdPerson
        size={32}
      >
        <IconBase
          attr={
            Object {
              "viewBox": "0 0 24 24",
            }
          }
          size={32}
        >
          <svg
            fill="currentColor"
            height={32}
            size={32}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              key="0"
            />
          </svg>
        </IconBase>
      </MdPerson>
    </div>
    <div
      className="display-right-element"
    >
      <Table
        elements={
          Array [
            Object {
              "name": "BCeID",
              "value": "bobross42",
            },
            Object {
              "name": "Last Name",
              "value": "Ross",
            },
            Object {
              "name": "First Name",
              "value": "Bob",
            },
            Object {
              "name": "Email Address",
              "value": "bob.ross@example.com",
            },
          ]
        }
        heading=""
        isFeesData={false}
        styling=""
      >
        <table
          className=""
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              />
            </tr>
          </thead>
          <tbody>
            <TableElement
              element={
                Object {
                  "name": "BCeID",
                  "value": "bobross42",
                }
              }
              isFeesData={false}
              key="BCeID"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  BCeID
                </td>
                <td>
                  bobross42
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Last Name",
                  "value": "Ross",
                }
              }
              isFeesData={false}
              key="Last Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Last Name
                </td>
                <td>
                  Ross
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "First Name",
                  "value": "Bob",
                }
              }
              isFeesData={false}
              key="First Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  First Name
                </td>
                <td>
                  Bob
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Email Address",
                  "value": "bob.ross@example.com",
                }
              }
              isFeesData={false}
              key="Email Address"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Email Address
                </td>
                <td>
                  bob.ross@example.com
                </td>
              </tr>
            </TableElement>
          </tbody>
        </table>
      </Table>
    </div>
  </div>
</DisplayBox>
`;

exports[`Storyshots DisplayBox With Side By Side Content 1`] = `
<DisplayBox
  element={
    <Table
      elements={
        Array [
          Object {
            "isSideBySide": true,
            "name": <p
              style={
                Object {
                  "width": "80%",
                }
              }
            >
              This is the content on the left of the display box. Maybe there will be other content on the right too.
            </p>,
            "value": <p
              style={
                Object {
                  "width": "80%",
                }
              }
            >
              This is the content on the right of the display box. There already is content on the left side of the box.
            </p>,
          },
        ]
      }
      heading=""
      isFeesData={false}
      styling=""
    />
  }
  icon={null}
  styling="display-left-element"
>
  <div
    className="display-box display-left-element"
  >
    <div
      className="display-right-element"
    >
      <Table
        elements={
          Array [
            Object {
              "isSideBySide": true,
              "name": <p
                style={
                  Object {
                    "width": "80%",
                  }
                }
              >
                This is the content on the left of the display box. Maybe there will be other content on the right too.
              </p>,
              "value": <p
                style={
                  Object {
                    "width": "80%",
                  }
                }
              >
                This is the content on the right of the display box. There already is content on the left side of the box.
              </p>,
            },
          ]
        }
        heading=""
        isFeesData={false}
        styling=""
      >
        <table
          className=""
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              />
            </tr>
          </thead>
          <tbody>
            <TableElement
              element={
                Object {
                  "isSideBySide": true,
                  "name": <p
                    style={
                      Object {
                        "width": "80%",
                      }
                    }
                  >
                    This is the content on the left of the display box. Maybe there will be other content on the right too.
                  </p>,
                  "value": <p
                    style={
                      Object {
                        "width": "80%",
                      }
                    }
                  >
                    This is the content on the right of the display box. There already is content on the left side of the box.
                  </p>,
                }
              }
              isFeesData={false}
              key="[object Object]"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className="side-by-side"
                >
                  <p
                    style={
                      Object {
                        "width": "80%",
                      }
                    }
                  >
                    This is the content on the left of the display box. Maybe there will be other content on the right too.
                  </p>
                </td>
                <td>
                  <p
                    style={
                      Object {
                        "width": "80%",
                      }
                    }
                  >
                    This is the content on the right of the display box. There already is content on the left side of the box.
                  </p>
                </td>
              </tr>
            </TableElement>
          </tbody>
        </table>
      </Table>
    </div>
  </div>
</DisplayBox>
`;

exports[`Storyshots DisplayBox Without Icon 1`] = `
<DisplayBox
  element={
    <Table
      elements={
        Array [
          Object {
            "name": "BCeID",
            "value": "bobross42",
          },
          Object {
            "name": "Last Name",
            "value": "Ross",
          },
          Object {
            "name": "First Name",
            "value": "Bob",
          },
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          },
        ]
      }
      heading=""
      isFeesData={false}
      styling=""
    />
  }
  icon={null}
  styling=""
>
  <div
    className="display-box "
  >
    <div
      className="display-right-element"
    >
      <Table
        elements={
          Array [
            Object {
              "name": "BCeID",
              "value": "bobross42",
            },
            Object {
              "name": "Last Name",
              "value": "Ross",
            },
            Object {
              "name": "First Name",
              "value": "Bob",
            },
            Object {
              "name": "Email Address",
              "value": "bob.ross@example.com",
            },
          ]
        }
        heading=""
        isFeesData={false}
        styling=""
      >
        <table
          className=""
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              />
            </tr>
          </thead>
          <tbody>
            <TableElement
              element={
                Object {
                  "name": "BCeID",
                  "value": "bobross42",
                }
              }
              isFeesData={false}
              key="BCeID"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  BCeID
                </td>
                <td>
                  bobross42
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Last Name",
                  "value": "Ross",
                }
              }
              isFeesData={false}
              key="Last Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Last Name
                </td>
                <td>
                  Ross
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "First Name",
                  "value": "Bob",
                }
              }
              isFeesData={false}
              key="First Name"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  First Name
                </td>
                <td>
                  Bob
                </td>
              </tr>
            </TableElement>
            <TableElement
              element={
                Object {
                  "name": "Email Address",
                  "value": "bob.ross@example.com",
                }
              }
              isFeesData={false}
              key="Email Address"
            >
              <tr
                className=""
                colSpan="2"
              >
                <td
                  className=""
                >
                  Email Address
                </td>
                <td>
                  bob.ross@example.com
                </td>
              </tr>
            </TableElement>
          </tbody>
        </table>
      </Table>
    </div>
  </div>
</DisplayBox>
`;
